--- a/DeMarksWebsite/package.json
+++ b/DeMarksWebsite/package.json
@@ -15,10 +15,13 @@
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/localize": "~13.3.0",
     "@angular/material": "^13.3.6",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.1",
+    "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "material-icons": "^1.10.11",
     "rxjs": "~7.5.0",
