--- a/DeMarksWebsite/package.json
+++ b/DeMarksWebsite/package.json
@@ -23,8 +23,12 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.1",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "material-icons": "^1.10.11",
     "ng-animate": "^1.0.0",
+    "ng2-animate-on-scroll": "^2.3.2",
+    "ng2-charts": "^3.0.11",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
