--- a/DeMarksWebsite/angular.json
+++ b/DeMarksWebsite/angular.json
@@ -30,7 +30,9 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "../assets/calcprojectjs/calcMain.js"
+            ]
           },
           "configurations": {
             "production": {
