--- a/DeMarksWebsite/angular.json
+++ b/DeMarksWebsite/angular.json
@@ -31,7 +31,7 @@
               "src/styles.css"
             ],
             "scripts": [
-              "../assets/calcprojectjs/calcMain.js"
+              "./src/assets/calcprojectjs/calcMain.js"
             ]
           },
           "configurations": {
